@@ -46,6 +46,7 @@ import org.jsampler.LSConsoleModel;
 import org.jsampler.Prefs;
 
 import org.jsampler.view.std.JSConnectionPropsPane;
+import org.jsampler.view.std.JSDefaultsPropsPane;
 import org.jsampler.view.std.JSGeneralProps;
 import org.jsampler.view.std.JSLSConsolePropsPane;
 
@@ -61,6 +62,7 @@ public class PrefsDlg extends EnhancedDialog {
 	private final GeneralPane genPane = new GeneralPane();
 	private final ConsolePane consolePane = new ConsolePane();
 	private final JSConnectionPropsPane connectionPane = new JSConnectionPropsPane();
+	private final JSDefaultsPropsPane defaultsPane;
 	
 	private final JButton btnApply = new JButton(i18n.getButtonLabel("apply"));
 	private final JButton btnClose = new JButton(i18n.getButtonLabel("close"));
@@ -71,6 +73,8 @@ public class PrefsDlg extends EnhancedDialog {
 	PrefsDlg(Frame owner) {
 		super(owner, i18n.getLabel("PrefsDlg.title"), true);
 		
+		defaultsPane = new JSDefaultsPropsPane(this, Res.iconEdit16);
+		
 		JTabbedPane tp = new JTabbedPane();
 		tp.addTab(i18n.getLabel("PrefsDlg.tabGeneral"), genPane);
 		tp.addTab(i18n.getLabel("PrefsDlg.tabConsole"), consolePane);
@@ -80,6 +84,7 @@ public class PrefsDlg extends EnhancedDialog {
 		p.setBorder(BorderFactory.createEmptyBorder(6, 6, 6, 6));
 		p.add(connectionPane, BorderLayout.NORTH);
 		tp.addTab(i18n.getLabel("PrefsDlg.tabConnection"), p);
+		tp.addTab(i18n.getLabel("PrefsDlg.tabDefaults"), defaultsPane);
 		
 		tp.setAlignmentX(RIGHT_ALIGNMENT);
 		
@@ -138,6 +143,7 @@ public class PrefsDlg extends EnhancedDialog {
 		genPane.apply();
 		consolePane.apply();
 		connectionPane.apply();
+		defaultsPane.apply();
 		
 		setVisible(false);
 	}
