@@ -9,7 +9,7 @@ Channel.ttDefault = Using the default map: {0}
 
 ChannelOptions.routing = Channel Routing
 
-ChannelScreen.errorLoadingInstrument = Failed to load instrument
+ChannelScreen.errorLoadingInstrument = Failed to load instrument!
 ChannelScreen.loadingInstrument = Loading Instrument... ({0}%)
 ChannelScreen.volume = {0}%
 
@@ -60,6 +60,7 @@ OrchestrasPane.orchestrasTaskPane = Manage Orchestras
 
 PrefsDlg.tabConnection = Connection
 PrefsDlg.tabConsole = LS Console
+PrefsDlg.tabDefaults = Defaults
 PrefsDlg.tabGeneral = General
 PrefsDlg.title = Preferences
 
